--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
+    "autoprefixer": "^10.4.20",
     "core-js": "^3.25.3",
     "nuxt": "^2.15.8",
+    "postcss": "^8.4.41",
+    "tailwindcss": "2.0",
     "vue": "^2.7.10",
     "vue-server-renderer": "^2.7.10",
     "vue-template-compiler": "^2.7.10",
