--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.4.5",
     "nuxt": "^2.15.8",
     "postcss": "^8.4.41",
+    "prismjs": "^1.29.0",
     "tailwindcss": "2.0",
     "typed.js": "^2.1.0",
     "vue": "^2.7.10",
